[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "saveload"
version = "0.1.0"
description = "Simple Python variable serializer/loader using pickle."
authors = ["Taishi Hashimoto <hashimoto.taishi@nipr.ac.jp>"]
packages = [
    { include = "saveload", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"

